fix scrollbars

--- a/src/app/features/stream/components/stream-detail/stream-detail.component.scss
+++ b/src/app/features/stream/components/stream-detail/stream-detail.component.scss
@@ -71,7 +71,7 @@
       }
 
       kido-json-editor {
-        margin: 0px 5px 5px 5px;
+        margin: 0px 8px 8px 8px;
         height: 100px;
 
         &.eventable {
