--- a/src/styles/_scrollbar.scss
+++ b/src/styles/_scrollbar.scss
@@ -1,17 +1,27 @@
-::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
+$scrollbar-color: #504f4f;
 
-  &:hover {
-    filter: brightness(110%);
+.kido-scroll * {
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
   }
-}
 
-::-webkit-scrollbar-thumb {
-  background: var(--hairline-strong);
-  border-radius: 10px;
-}
+  &::-webkit-scrollbar {
+    width: 15px;
+    height: 15px;
+  }
 
-::-webkit-scrollbar-corner {
-  background-color: transparent;
+  &::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba($scrollbar-color, 0.5);
+    border-radius: 10px;
+    border: 5px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+
+    &:hover {
+      background-color: rgba($scrollbar-color, 1);
+    }
+  }
 }
